# EquiML

./: .dockerignore  .flake8  .gitignore  Beginners_Tutorial_for_Using_EquiML.md  Beginner’s Tutorial for Using EquiML.md  CHANGELOG.md  COMMUNITY_ATTENTION_STRATEGY.md  CONTRIBUTING.md  Complete_Guide_to_Building_Fair_LLMs_with_EquiML.md  DOCKER.md  Dockerfile  Dockerfile.dev  Dockerfile.jupyter  Dockerfile.prod  EquiML Framework Explanation.md  LICENSE  MIT License.txt  README.md  SECURITY.md  adult_income_evaluation_report.html  conftest.py  create_test_data.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  equiml_cleanup_brief.md  index.txt  installation.txt  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py  test-complete-docker.sh  tutorials.txt  verification_report_enhanced.html
.claude/: MEMORY_CONTEXT.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docker-publish.yml
docker/: README.md  build.sh  publish-to-dockerhub.sh  push.sh  test.sh
docs/guides/: Complete_Beginners_Guide_to_EquiML.md  Complete_Guide_to_Building_Fair_LLMs_with_EquiML.md  Complete_Guide_to_Fine_Tuning_LLMs_with_LoRA_and_EquiML.md  README.md
docs/rfcs/: 0001-policy-as-code.md  0002-model-card-generation.md  0003-fairness-drift-monitoring.md  0004-counterfactual-fairness.md  0005-feedback-loop-simulation.md  0006-group-uncertainty-fairness.md
equiml/: __init__.py  card.py  cli.py  counterfactual.py  data.py  drift.py  drift_report_template.md.j2  evaluation.py  model.py  model_card_template.md.j2  policy.py  report_template.html  reporting.py  simulation.py  uncertainty.py
examples/: DRIFT_REPORT.md  MODEL_CARD.md  README.md  adult_census_audit.py  counterfactual_demo.py  fairness.yaml  feedback_loop_demo.py  model_card_config.yaml  monitor_state.jsonl  uncertainty_demo.py
examples/notebooks/: quick_start_tutorial.ipynb
examples/scripts/: quick_bias_check.py
examples/web_demo/: Dockerfile  README.md  analytics.py  app.py  deploy.sh  docker-compose.yml  landing_page.py  launch_checklist.md  marketing_materials.md  nginx.conf  requirements.txt
src/: __init__.py  data.py  evaluation.py  model.py  model_extended.py  monitoring.py  report_template.html  reporting.py  streamlit_app.py  visualization.py
tests/: Test and Try User_Guide.markdown  __init__.py  adult.csv  report_template.html  test_adversarial.py  test_audit_pipeline.py  test_basic.py  test_card.py  test_cli.py  test_counterfactual.py  test_data.py  test_drift.py  test_equiml_framework.py  test_evaluation.py  test_model.py  test_model_contracts.py  test_multi_sensitive.py  test_policy.py  test_simulation.py  test_substring_collision.py  test_uncertainty.py
