[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "equiml"
version = "1.0.0"
description = "Quick fairness audits for ML datasets. Wraps fairlearn, SHAP, and scikit-learn into a single CLI pipeline."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Michael Kupermann", email = "michael@kupermann.com"}]
keywords = ["fairness", "ml", "audit", "fairlearn", "responsible-ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pandas>=1.5,<3",
    "numpy>=1.21,<3",
    "scikit-learn>=1.1,<2",
    "fairlearn>=0.8,<1",
    "shap>=0.40,<1",
    "lime>=0.2,<1",
    "matplotlib>=3.5,<4",
    "seaborn>=0.11,<1",
    "scipy>=1.9,<2",
    "jinja2>=3.0,<4",
    "statsmodels>=0.13,<1",
    "plotly>=5.0,<6",
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "flake8>=4.0", "coverage>=6.0"]

[project.urls]
Homepage = "https://github.com/mkupermann/EquiML"
Repository = "https://github.com/mkupermann/EquiML"
Issues = "https://github.com/mkupermann/EquiML/issues"
Changelog = "https://github.com/mkupermann/EquiML/blob/main/CHANGELOG.md"

[project.scripts]
equiml = "equiml.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
